ADD: 新增一些题

--- a/docs/简历.md
+++ b/docs/简历.md
@@ -64,6 +64,27 @@ iOS 不同机型不同版本对于内存阈值不一样，我们也让 QA 同学
 + 利用 OOMDetector 排查多礼物和多弹幕的场景，发现了一些不合理的图片设置的场景。在内存不吃紧的情况下，这种问题不突出，但是在礼物或者弹幕消息特别多的时候，这种问题就明显了。切换到视频那边的智能图片库，通过向下采样等手段优化图片资源对内存的占用。
 + 整理代码，去掉了一些滥用了的单例，比如 resource manager 这样的。此外，微视存在着一些自定义的滤镜，是用 GPUImage 1 编写的，我们优化了一些代码，将UIImage声明，Filter操作等放置在需要在 autoreleasepool 块中释放的内存中。它有助于手动减少内存使用。
 + 借助 Instruments 的 Leaks 分析内存泄漏，
++ Hippy 导致的 Crash，很多都是 JSC 黑盒的，（21H2 0.08% -> 22H1 0.16%）开启[com.apple.developer.kernel.increased-memory-limit](https://developer.apple.com/documentation/bundleresources/entitlements/com_apple_developer_kernel_increased-memory-limit?language=objc)，结合[com.apple.developer.kernel.extended-virtual-addressing](https://developer.apple.com/documentation/bundleresources/entitlements/com_apple_developer_kernel_extended-virtual-addressing)
+
+
+>Use this entitlement if your app has specific needs that require a larger addressable space. For example, games that memory map assets to stream to the GPU may benefit from a larger address space.
+>
+
+简单总结：
+
+苹果很少在公开文档中说明64位App在虚拟内存使用上存在限制。而且很多App也并没有像浏览器内一样，为业务灵活性而选择将hippy、flutter等技术进行大规模的组合使用，所以可能很多App其实并不会遇到虚拟内存不足的情况。
+
+上线效果也说明浏览器在混合开发的场景下，内存优化仍然存在很大的空间。因为Extended Virtual Addressing仅能缓解虚拟内存不足的情况，并不意味着App的物理内存也得到增加，对FOOM的治理仍然需要持续。
+
+鉴于司内有不少的著名组件都会使用mmap机制进行内存管理，建议在使用相关组件时，控制好mmap的大小。
+
+如果有需要在iPhone 12 Pro、M1 iPad、M1上运行应用，并希望解放更多的物理内存，建议增加com.apple.developer.kernel.increased-memory-limit的能力声明，实测在iPhone 13 Pro下可以增加1GB的可用物理内存。
+
+ReactNative和类似框架在项目中使用较多的，建议需要考虑多个Context的复用，减少创建重复内容，司内外都有实践证明该措施十分有效。
+
+对于flutter一类的内存优化，可翻阅engine的相关代码。flutter vm在创建时允许外部传参控制vm行为，包括：old heap size、leak vm等。合适的参数可比较有效控制内存占用。
+
+以上源码相关的内容仅个人阅读理解，如有错误请指出。
 
 ## 能耗优化
 
